--- a/src/components/Layout/Header/Nav/NavItem/navItem.module.scss
+++ b/src/components/Layout/Header/Nav/NavItem/navItem.module.scss
@@ -1,3 +1,12 @@
+@import "../../../../../styles/variables";
+
 .navItem {
-    margin  : 0 10px
+    margin  : 0 2rem;
+    font-size: 2.2rem;
+    text-transform: uppercase;
+
+    a {
+        // color : $white
+    }
+   
 }
