--- a/src/components/Layout/Header/header.module.scss
+++ b/src/components/Layout/Header/header.module.scss
@@ -5,7 +5,10 @@
     display: flex;
     align-items:   center;
     width: 90%;
-    margin: auto;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    padding : 20px
 }
 
 .headerLogo,
