--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 html {
     font-family: "PTSansNarrow";
     font-size : 62.5%; // 10px
@@ -6,10 +8,16 @@ html {
 body {
     padding : 0;
     margin : 0;
+    background-color: $white;
 }
 
 ul {
     padding : 0;
     margin : 0;
     list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color : currentColor
 }
