--- a/src/components/Layout/Header/Nav/NavItem/navItem.module.scss
+++ b/src/components/Layout/Header/Nav/NavItem/navItem.module.scss
@@ -5,8 +5,14 @@
     font-size: 2.2rem;
     text-transform: uppercase;
 
-    a {
-        // color : $white
+   a {
+    color :rgba($white, .8);
+    transition: all .1s ease-in-out;
+    
+    &:hover {
+        color : $white;
+        text-shadow: .1rem .1rem .5rem $white;
+    
     }
-   
+   }
 }
