--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -1,7 +1,7 @@
 @import "./variables";
 
 html {
-    font-family: "PTSansNarrow";
+    font-family: "NotoSans";
     font-size : 62.5%; // 10px
 }
 
