--- a/src/components/Layout/Header/UserOptions/userOptions.module.scss
+++ b/src/components/Layout/Header/UserOptions/userOptions.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables";
+@import "../../../../styles/variables";
 
 .userOptions {
     display: flex;
@@ -14,7 +14,7 @@
     svg {
 
         * {
-            stroke-width: 2px;
+            stroke-width: 1px;
             fill : $white;
             stroke: $white;
         }
