--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -10,6 +10,10 @@
 html {
     font-family: "NotoSans";
     font-size : 62.5%; // 10px
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 body {
