--- a/src/components/shared/Button/button.module.scss
+++ b/src/components/shared/Button/button.module.scss
@@ -21,6 +21,12 @@
 
     }
 
+    &.normalButton {
+        padding : 10px 20px;
+        background-color: $primary;
+        color : $white
+    }
+
     &.arrowButton {
         // border-bottom: 1px solid $primary;
         padding : 0;
