--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -5,6 +5,8 @@
 *::before {
     box-sizing: border-box;
     text-transform: uppercase;
+
+   
 }
 
 html {
@@ -31,4 +33,13 @@ ul {
 a {
     text-decoration: none;
     color : currentColor
+}
+
+input {
+    &:focus,
+    &:focus-visible,
+    &:active {
+        outline-width: 0 !important;
+        box-shadow: none !important;
+    }
 }
