added footer section, changed to rem, finished landing page

--- a/src/components/BecomeMember/becomeMember.module.scss
+++ b/src/components/BecomeMember/becomeMember.module.scss
@@ -38,7 +38,7 @@
     top : 45%;
 
     span {
-        margin : 30px 0;
+        margin : 3rem 0;
         &:first-of-type {
             transform: translateX(-60%);
         }
