--- a/src/components/Logo/logo.module.scss
+++ b/src/components/Logo/logo.module.scss
@@ -2,8 +2,8 @@
 
 .miniLogo {
     svg {
-        width : 45px;
-        height : 42px;
+        width : 4.5rem;
+        height : 4.2rem;
         
         path {
             fill : $white
