--- a/src/components/Sale/sale.module.scss
+++ b/src/components/Sale/sale.module.scss
@@ -8,7 +8,7 @@
 .saleImageBox {
     position: relative;
     clip-path:polygon(0 0, 69% 18%, 46% 98%, 0% 100%);
-    margin-left: -20px;
+    margin-left: -2rem;
 }
 
 .saleOverlay {
