--- a/src/components/Banner/banner.module.scss
+++ b/src/components/Banner/banner.module.scss
@@ -1,7 +1,7 @@
 .banner {
     height: 100vh;
     background-image: url(../../../public/images/Banner.jpg);
-    margin : 0 -20px;
-    margin-top: -100px;
+    margin : 0 -2rem;
+    margin-top: -10rem;
     background-size: cover;
 }
