--- a/src/components/Categories/categories.module.scss
+++ b/src/components/Categories/categories.module.scss
@@ -5,11 +5,11 @@
     align-items: center;
     width: 98%;
     justify-content: space-between;
-    padding : 20px 20px;
+    padding : 2rem;
     height: 100vh;
 }
 
 .categoriesExplore {
-    margin : 40px 0;
+    margin : 4rem 0;
     @include flex-center();
 }
