--- a/src/components/Layout/Header/UserOptions/userOptions.module.scss
+++ b/src/components/Layout/Header/UserOptions/userOptions.module.scss
@@ -8,7 +8,7 @@
 .user,
 .bag {
     cursor: pointer;
-    margin : 0 10px;
+    margin : 0 1rem;
 
 
     svg {
@@ -19,8 +19,8 @@
             stroke: $white;
         }
 
-        width : 30px;
-        height: 30px;
+        width : 3rem;
+        height: 3rem;
     }
 }
 
