--- a/src/components/shared/Input/input.module.scss
+++ b/src/components/shared/Input/input.module.scss
@@ -3,11 +3,11 @@
 .inputContainer {
     display: flex;
     flex-direction: column;
-    margin : 10px 0;
+    margin : 1rem 0;
 }   
 
 .input {
-    padding : 5px 10px;
+    padding : .5rem 1rem;
     background-color: transparent;
     border : 1px solid $primary;
 
