--- a/src/components/core/Button/button.module.scss
+++ b/src/components/core/Button/button.module.scss
@@ -10,7 +10,7 @@
     font-weight: 500;
     transition: all .2s ease-in-out;
     cursor: pointer;
-    box-shadow: 2px 2px 10px rgba($secondary, .2);
+    // box-shadow: 2px 2px 10px rgba($secondary, .2);
    
 
     svg {
