--- a/src/animations/fadeTopBottom.module.scss
+++ b/src/animations/fadeTopBottom.module.scss
@@ -1,21 +1,18 @@
 .fadeTopBottomEnter {
-    transform: translateY(-10px);
-    opacity: 0;
-
-};
+  transform: translateY(-10px);
+  opacity: 0;
+}
 .fadeTopBottomEnterActive {
-    transform: translateY(0);
-    opacity: 1;
-    transition: all .2s ease-in-out;
-};
+  transform: translateY(0);
+  opacity: 1;
+  transition: all 0.2s ease-in-out;
+}
 .fadeTopBottomExit {
-    transform: translateY(-10px);
-    opacity: 1;
-    color : blue;
-
-};
+  transform: translateY(0);
+  opacity: 1;
+}
 .fadeTopBottomExitActive {
-    transform: translateY(-10px);
-    opacity: 0;
-    transition: all .2s ease-in-out;
-};
+  transform: translateY(-10px);
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
