--- a/src/components/core/Button/button.module.scss
+++ b/src/components/core/Button/button.module.scss
@@ -1,97 +1,100 @@
 @import "../../.././styles/mixins";
 @import "../../.././styles/variables";
 
-
 .commonButton {
-    @include flex-center();
-    background: none;
-    border :0;
-    display: block;
-    font-weight: 500;
-    transition: all .2s ease-in-out;
-    cursor: pointer;
-    // box-shadow: 2px 2px 10px rgba($secondary, .2);
-   
+  @include flex-center();
+  background: none;
+  border: 0;
+  display: block;
+  font-weight: 500;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  // box-shadow: 2px 2px 10px rgba($secondary, .2);
 
-    svg {
-        width: 3rem;
-        height: 1.2rem;
-        margin-left: .5rem;
-        transition: all .2s ease-in-out;
+  &:disabled {
+    opacity: 0.5;
+  }
 
+  svg {
+    width: 3rem;
+    height: 1.2rem;
+    margin-left: 0.5rem;
+    transition: all 0.2s ease-in-out;
+  }
+
+  &.normalButton {
+    padding: 1rem 2rem;
+    background-color: $primary;
+    color: $white;
+
+    &:disabled:hover {
+      background-color: $primary;
+    }
+  }
+
+  &.arrowButton {
+    padding: 0;
+    position: relative;
+    padding-bottom: 0.5rem;
+
+    &::before {
+      transition: all 0.2s ease-in-out;
+
+      content: "";
+      display: block;
+      width: 100%;
+      border-bottom: 2px solid $primary;
+      position: absolute;
+      bottom: -0.2rem;
+      transform: scaleX(0);
+      transform-origin: left;
     }
 
-    &.normalButton {
-        padding : 1rem 2rem;
-        background-color: $primary;
-        color : $white
+    &:hover {
+      &::before {
+        transform: scaleX(1);
+      }
+
+      svg {
+        transform: translateX(0.5rem);
+      }
+    }
+  }
+
+  &.borderButtonLight,
+  &.borderButtonDark {
+    padding: 1rem 2rem;
+    font-size: 1.6rem;
+    transition: all 0.2s ease-in-out;
+  }
+
+  &.borderButtonLight {
+    border: 1px solid $white;
+    color: $white;
+
+    &:hover {
+      background-color: $white;
+      color: $primary;
+      box-shadow: none;
     }
 
-    &.arrowButton {
-        padding : 0;
-        position: relative;
-        padding-bottom: .5rem;
+    &:disabled:hover {
+      background-color: $white !important;
+    }
+  }
 
-        &::before {
-            transition: all .2s ease-in-out;
+  &.borderButtonDark {
+    border: 1px solid $primary;
+    color: $primary;
 
-            content : "";
-            display: block;
-            width : 100%;
-            border-bottom: 2px solid $primary;
-            position: absolute;
-            bottom: -.2rem;
-            transform: scaleX(0);
-            transform-origin: left;
-        }
-
-        &:hover {
-
-            &::before {
-                transform: scaleX(1);
-
-
-            }
-
-            svg {
-                transform: translateX(.5rem);
- 
-            }
-        }
+    &:hover {
+      background-color: $primary;
+      color: $white;
+      box-shadow: none;
     }
 
-
-    &.borderButtonLight,
-    &.borderButtonDark {
-        padding : 1rem 2rem;
-        font-size: 1.6rem;
-        transition: all .2s ease-in-out;
-        
-      
+    &:disabled:hover {
+      background-color: $primary;
     }
-
-    &.borderButtonLight {
-        border : 1px solid $white;
-        color : $white;
-
-        &:hover {
-            background-color: $white;
-            color : $primary;
-            box-shadow: none;
-        }
-
-    }
-
-    &.borderButtonDark {
-        border : 1px solid $primary;
-        color : $primary;
-
-        &:hover {
-            background-color: $primary;
-            color : $white;
-            box-shadow: none;
-
-        }
-    }
+  }
 }
-
