--- a/src/components/BecomeMember/becomeMember.module.scss
+++ b/src/components/BecomeMember/becomeMember.module.scss
@@ -2,72 +2,71 @@
 @import "../../styles/mixins";
 
 .becomeMemberImgContainer {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 48% 100%);
-    position: relative;
-    margin-right: -2rem;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 48% 100%);
+  position: relative;
+  margin-right: -2rem;
 }
 
 .becomeMemberOverlay {
-    position: absolute;
-    top : 0;
-    left  : 0;
-    background-color: rgba($primary, .7);
-    width : 100%;
-    height : 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba($primary, 0.7);
+  width: 100%;
+  height: 100%;
 }
 
 .becomeMemberImg {
-    height : 100%;
+  height: 100%;
 }
 
 .becomeMemberSection {
-    display: flex;
-    margin : 5rem 0;
-    position: relative;
-    justify-content: flex-end
+  display: flex;
+  margin: 5rem 0;
+  position: relative;
+  justify-content: flex-end;
 }
 
 .becomeMemberImgText {
-    @include absolute-center();
-    color : $white;
-    font-size: 6rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    left : 60%;
-    top : 45%;
+  @include absolute-center();
+  color: $white;
+  font-size: 6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  left: 60%;
+  top: 45%;
 
-    span {
-        margin : 3rem 0;
-        &:first-of-type {
-            transform: translateX(-60%);
-        }
-
-        &:last-of-type {
-            transform: translateX(50%);
-
-        }
+  span {
+    margin: 3rem 0;
+    &:first-of-type {
+      transform: translateX(-60%);
     }
+
+    &:last-of-type {
+      transform: translateX(50%);
+    }
+  }
 }
 
 .becomeMemberInfo {
-    @include absolute-center();
-    left: 14%;
-    width: 25%;
-    top : 55%;
+  @include absolute-center();
+  left: 14%;
+  width: 25%;
+  top: 55%;
 }
 
 .becomeMemberDescription {
-    font-size: 2rem;
-    text-align: center;
+  font-size: 2rem;
+  text-align: center;
 }
 
 .becomeMemberButton {
-    width: 50%;
-    margin: auto;
-    margin-top: 5rem;
+  width: 50%;
+  margin: auto;
+  margin-top: 5rem;
 }
 
 .becomeMemberInput {
-    margin: 5rem 0;;
+  margin: 5rem 0;
 }
