--- a/src/components/Nav/NavItem/navItem.module.scss
+++ b/src/components/Nav/NavItem/navItem.module.scss
@@ -1,18 +1,17 @@
 @import "../../../styles/variables";
 
 .navItem {
-    margin  : 0 2rem;
-    font-size: 1.6rem;
-    text-transform: uppercase;
+  margin: 0 2rem;
+  font-size: 2rem;
+  text-transform: uppercase;
 
-   a {
-    color :rgba($white, .8);
-    transition: all .1s ease-in-out;
-    
+  a {
+    color: rgba($white, 0.8);
+    transition: all 0.1s ease-in-out;
+
     &:hover {
-        color : $white;
-        text-shadow: .1rem .1rem .3rem $white;
-    
+      color: $white;
+      text-shadow: 0.1rem 0.1rem 0.3rem $white;
     }
-   }
+  }
 }
