--- a/src/components/core/Dropdown/dropdown.module.scss
+++ b/src/components/core/Dropdown/dropdown.module.scss
@@ -11,9 +11,9 @@
 }
 
 .dropdownItem {
-  padding: 1rem;
+  padding: 1rem 2rem;
   font-size: 1.4rem;
-  font-weight: 300;
+  font-weight: 400;
   background-color: $white;
   transition: all 0.1s ease-in-out;
   border-bottom: 1px solid rgba($primary, 0.5);
