--- a/src/components/core/Dropdown/dropdown.module.scss
+++ b/src/components/core/Dropdown/dropdown.module.scss
@@ -16,9 +16,10 @@
   font-weight: 400;
   background-color: $white;
   transition: all 0.1s ease-in-out;
-  border-bottom: 1px solid rgba($primary, 0.5);
   display: flex;
   align-items: center;
+
+  cursor: pointer;
 
   &:hover {
     background-color: darken($white, 10);
@@ -30,6 +31,10 @@
         fill: none;
       }
     }
+  }
+
+  &:not(:last-of-type) {
+    border-bottom: 1px solid rgba($primary, 0.5);
   }
 
   .dropdownOptionIcon {
