--- a/src/components/Product/product.module.scss
+++ b/src/components/Product/product.module.scss
@@ -1,83 +1,86 @@
 @import "../../styles/variables";
 
-.productBox {display: flex;
-flex-direction: column;
-justify-content: space-between;}
+.productBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 .productImage {
-    width: 100%;
+  width: 100%;
 }
 
 .productInfo {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .productTitle,
 .productRating {
-    width: 85%;
-    margin : 0;
+  width: 85%;
+  margin: 0;
 }
 
 .productNewPrice,
 .productOldPrice {
-    width: 15%;
+  width: 15%;
 }
 
 .productTitle {
-    font-size: 1.5rem;
-    font-weight: 400;
-    color : $primary;
-    margin : .5rem 0;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: $primary;
+  margin: 0.5rem 0;
 }
 
 .productOldPrice {
-    font-size: 1.5rem;
-    margin : .5rem 0;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    padding-right: .5rem;
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  padding-right: 0.5rem;
 
-    &::before {
-        content : "";
-        display: block;
-        width : 100%;
-        position: absolute;
-        right : 0;
-        top : 53%;
-        transform : translateY(-50%);
-        border-bottom : 1px solid $primary
-    }
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    position: absolute;
+    right: 2px;
+    top: 45%;
+    transform: translateY(-50%);
+    border-bottom: 1px solid $primary;
+  }
 }
 
 .productNewPrice {
-    font-size: 1.7rem;
-    margin : .5rem 0;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    padding-right: .5rem;
-    color : $danger;
-    font-weight: 600;
+  font-size: 1.7rem;
+  margin: 0.5rem 0;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  padding-right: 0.5rem;
+  color: $danger;
+  font-weight: 600;
 }
 
 .productRating {
-    margin : .5rem 0;
-    display: flex;
-    align-items: center;
-    svg {
-        width: 1.4rem;
-        height: 1.4rem;
-        margin : 0 .2rem;
-        fill : $primary
-    }
+  margin: 0.5rem 0;
+  display: flex;
+  align-items: center;
+  svg {
+    width: 1.4rem;
+    height: 1.4rem;
+    margin: 0 0.2rem;
+    fill: $primary;
+  }
 
-    span {
-        margin-left: .4rem;
-        margin-top: .2rem;
-
-    }
+  span {
+    margin-left: 0.4rem;
+    margin-top: 0.2rem;
+  }
 }
 
-.productButton {width: 100%;}
+.productButton {
+  width: 100%;
+}
