added product details page

--- a/src/components/Product/product.module.scss
+++ b/src/components/Product/product.module.scss
@@ -4,10 +4,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .productImage {
   width: 100%;
+  height: 350px;
+  object-fit: cover;
 }
 
 .productInfo {
