finshed product by id page

--- a/src/components/core/Button/button.module.scss
+++ b/src/components/core/Button/button.module.scss
@@ -10,6 +10,7 @@
   transition: all 0.2s ease-in-out;
   cursor: pointer;
   font-size: 1.7rem;
+  border: 1px solid $primary;
 
   &:disabled {
     opacity: 0.5;
