--- a/src/components/ProductDetails/CustomerReviews/customerReviews.module.scss
+++ b/src/components/ProductDetails/CustomerReviews/customerReviews.module.scss
@@ -3,6 +3,7 @@
 .reviewsContainer {
   display: flex;
   flex-direction: column;
+  padding: 0 2rem;
 }
 
 .reviewsHeader {
@@ -13,41 +14,4 @@
 .reviewsList {
   display: flex;
   flex-direction: column;
-}
-
-.reviewUser {
-  font-size: 1.8rem;
-  font-weight: 500;
-}
-
-.reviewsItem {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 2rem;
-}
-
-.reviewRate {
-  display: flex;
-  align-items: center;
-  margin: 0.5rem 0;
-  span {
-    margin-top: 0.4rem;
-    margin-left: 0.5rem;
-    font-size: 1.4rem;
-    font-weight: 500;
-    color: $secondary;
-  }
-
-  svg {
-    margin-right: 0.5rem;
-  }
-}
-
-.reviewContent {
-  font-size: 1.7rem;
-  font-weight: 500;
-  padding: 2rem;
-  margin: 0;
-  margin-top: 1rem;
-  border: 1px solid $primary;
 }
