--- a/src/components/core/Input/input.module.scss
+++ b/src/components/core/Input/input.module.scss
@@ -13,6 +13,7 @@
   border: 1px solid $primary;
   text-transform: lowercase;
   resize: none;
+  font-size: 1.6rem;
 
   &::placeholder {
     font-size: 1.2rem;
