added payment methods section

--- a/src/components/core/Button/button.module.scss
+++ b/src/components/core/Button/button.module.scss
@@ -93,5 +93,13 @@
 }
 
 .buttonIcon {
-  margin-left: 10px;
+  margin-left: 1rem;
+}
+
+.buttonPreIcon {
+  margin-right: 1rem;
+
+  svg {
+    margin-left: 0;
+  }
 }
