--- a/src/components/Layout/Header/UserOptions/userOptions.module.scss
+++ b/src/components/Layout/Header/UserOptions/userOptions.module.scss
@@ -1,4 +1,5 @@
 @import "../../../../styles/variables";
+@import "../../../../styles/mixins";
 
 .userOptions {
   display: flex;
@@ -31,6 +32,7 @@
 }
 
 .bag {
+  position: relative;
   svg {
     * {
       stroke: transparent;
@@ -48,4 +50,18 @@
 
 .userOptionsDropdown {
   margin-left: -100px;
+}
+
+.bagCount {
+  background-color: $danger;
+  padding: 0.4rem;
+  color: $white;
+  height: 1.7rem;
+  width: 1.7rem;
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -0.7rem;
+  right: -0.7rem;
+  @include flex-center();
 }
