--- a/src/pages/Bag/bag.module.scss
+++ b/src/pages/Bag/bag.module.scss
@@ -1,6 +1,9 @@
+@import "/src/styles/mixins";
+
 .bagPage {
   display: flex;
   flex-wrap: wrap;
+  min-height: 57vh;
 }
 
 .bagList {
@@ -15,4 +18,11 @@
   width: 100%;
   font-size: 3.3rem;
   font-weight: 500;
+}
+
+.bagEmpty {
+  @include absolute-center;
+  margin-top: -3rem;
+  font-size: 3rem;
+  opacity: 0.6;
 }
