added checkout APIs

--- a/src/components/CheckoutList/CheckoutItem/checkoutItem.module.scss
+++ b/src/components/CheckoutList/CheckoutItem/checkoutItem.module.scss
@@ -46,6 +46,11 @@
   text-align: center;
 }
 
+span.itemSelectedOption {
+  width: 100%;
+  text-align: left;
+}
+
 .itemTotals {
   display: flex;
   width: 30%;
