--- a/src/components/core/Button/button.module.scss
+++ b/src/components/core/Button/button.module.scss
@@ -11,6 +11,7 @@
   cursor: pointer;
   font-size: 1.6rem;
   border: 1px solid $primary;
+  position: relative;
 
   &:disabled {
     opacity: 0.5;
@@ -101,5 +102,34 @@
 
   svg {
     margin-left: 0;
+  }
+}
+
+.loading {
+  height: 3rem;
+  width: 3rem;
+  border: 2px dashed $black;
+  animation: spinner 2s linear infinite;
+  display: block;
+  border-radius: 50%;
+  @include absolute-center;
+}
+
+@keyframes spinner {
+  from {
+    transform: translate(-50%, -50%) rotateZ(0deg);
+  }
+
+  to {
+    transform: translate(-50%, -50%) rotateZ(360deg);
+  }
+}
+
+.loadingContainer {
+  height: 4rem;
+  background-color: $white !important;
+
+  &:hover {
+    background-color: $white !important;
   }
 }
