--- a/src/components/Categories/CategoryBox/categoryBox.module.scss
+++ b/src/components/Categories/CategoryBox/categoryBox.module.scss
@@ -2,51 +2,51 @@
 @import "../../../styles/mixins";
 
 .categoryImage {
-    width: 100%;
-    height: 100%;
-    display: block;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .categoryBox {
-    position: relative;
-    width: 22%;
-    box-shadow: 7px 7px 15px rgba($secondary, .5);
+  position: relative;
+  width: 22%;
+  box-shadow: 7px 7px 15px rgba($secondary, 0.5);
 
-    &:hover {
-        .categoryButton {
-            opacity: 1;
-            margin : 0
-        }
+  &:hover {
+    .categoryButton {
+      opacity: 1;
+      margin: 0;
     }
+  }
 }
 
-// .oddCategory {
-//     transform: translateY(-15%);
-// }
-
-
 .oddCategory {
-    transform: translateY(20%);
+  transform: translateY(20%);
 }
 
 .categoryTitle {
-    position: absolute;
-    font-size: 6rem;
-    color: $white;
-    @include absolute-center();
-    margin : 0;
-    font-weight: 600;
-    line-height: 1;
-    display: block;
-    font-style: italic;
-  
+  position: absolute;
+  font-size: 6rem;
+  color: $white;
+  @include absolute-center();
+  margin: 0;
+  font-weight: 600;
+  line-height: 1;
+  display: block;
+  font-style: italic;
 }
 
 .categoryButton {
-    @include absolute-center();
-    top : 90%;
-    color : $white;
-    border : $white;
-    margin-top: -.5rem;
-    opacity: 0;
+  @include absolute-center();
+  top: 90%;
+  color: $white;
+  border: $white;
+  margin-top: -0.5rem;
+  opacity: 0;
+}
+
+@include on-device(tablet) {
+  .categoryTitle {
+    font-size: 4rem;
+  }
 }
