--- a/src/components/Sale/sale.module.scss
+++ b/src/components/Sale/sale.module.scss
@@ -1,52 +1,87 @@
 @import "../../styles/variables";
+@import "../../styles/mixins";
 
 .saleSection {
- 
-    position: relative;
+  position: relative;
 }
 
 .saleImageBox {
-    position: relative;
-    clip-path:polygon(0 0, 69% 18%, 46% 98%, 0% 100%);
-    margin-left: -2rem;
+  position: relative;
+  clip-path: polygon(0 0, 69% 18%, 46% 98%, 0% 100%);
+  margin-left: -2rem;
 }
 
 .saleOverlay {
-    position: absolute;
-    top : 0;
-    left : 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba($primary, .5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba($primary, 0.5);
 }
 
 .saleImageText {
-    position: absolute;
-    top : 37%;
-    font-size: 6.5rem;
-    left: 4%;
-    color: $white;
+  position: absolute;
+  top: 37%;
+  font-size: 6.5rem;
+  left: 4%;
+  color: $white;
 }
 
 .saleDescriptionBox {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 30%;
-    position: absolute;
-    right: 5%;
-    top: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  position: absolute;
+  right: 5%;
+  top: 50%;
 }
 
 .saleTitle {
-    font-size: 2.5rem;
-    font-weight: 600;
+  font-size: 2.5rem;
+  font-weight: 600;
 }
 
 .saleDescription {
+  text-align: center;
+  font-size: 2.3rem;
+  width: 93%;
+  margin-bottom: 4rem;
+}
+
+@include on-device(tablet) {
+  .saleImageText {
+    font-size: 4rem;
+    top: 20%;
+    left: 40%;
     text-align: center;
-    font-size: 2.3rem;
-    width: 93%;
-    margin-bottom: 4rem;
+  }
+
+  .saleImageBox {
+    clip-path: none;
+    margin: 0;
+  }
+
+  .saleDescriptionBox {
+    color: $white;
+    left: 40%;
+    top: 45%;
+    text-align: center;
+    button {
+      color: $white !important;
+      border-color: $white !important;
+    }
+  }
+
+  .saleSection {
+    img {
+      width: 100%;
+    }
+  }
+
+  .saleOverlay {
+    height: 99.5%;
+  }
 }
