--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,13 +1,20 @@
 @mixin flex-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-};
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 @mixin absolute-center {
-    position: absolute;
-    top : 50%;
-    left : 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@mixin on-device($device) {
+  @if ($device == tablet) {
+    @media only screen and (max-width: 768px) {
+      @content;
+    }
+  }
 }
