--- a/src/components/BestSellers/bestSellers.module.scss
+++ b/src/components/BestSellers/bestSellers.module.scss
@@ -31,3 +31,10 @@
     justify-content: center;
   }
 }
+
+@include on-device(mobile) {
+  .bestSellersProduct {
+    width: 95%;
+    margin-bottom: 4rem;
+  }
+}
