--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -17,4 +17,10 @@
       @content;
     }
   }
+
+  @if ($device == mobile) {
+    @media only screen and (max-width: 520px) {
+      @content;
+    }
+  }
 }
