--- a/src/components/Categories/categories.module.scss
+++ b/src/components/Categories/categories.module.scss
@@ -1,15 +1,21 @@
 @import "../../styles/mixins";
 
 .categoriesRow {
-    display: flex;
-    align-items: center;
-    width: 98%;
-    justify-content: space-between;
-    padding : 2rem;
-    height: 100vh;
+  display: flex;
+  align-items: center;
+  width: 98%;
+  justify-content: space-between;
+  padding: 2rem;
+  min-height: 100vh;
 }
 
 .categoriesExplore {
-    margin : 4rem 0;
-    @include flex-center();
+  margin: 4rem 0;
+  @include flex-center();
+}
+
+@include on-device(mobile) {
+  .categoriesRow {
+    flex-wrap: wrap;
+  }
 }
