--- a/src/components/Layout/Footer/footer.module.scss
+++ b/src/components/Layout/Footer/footer.module.scss
@@ -2,70 +2,76 @@
 @import "../../../styles/variables";
 
 .footerSection {
-    @include flex-center();
-    flex-direction: column;
-    margin-top: 4rem;
+  @include flex-center();
+  flex-direction: column;
+  margin-top: 4rem;
 }
 
 .footerContact {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footerContactTitle {
-    font-size: 2rem;
-    margin: 1rem 0;
-    font-weight: 300;
+  font-size: 2rem;
+  margin: 1rem 0;
+  font-weight: 300;
 }
 
 .footerSocial {
-
-    svg {
-
-        &:first-of-type {
-            width: 2.5rem;
-            height: 2.5rem;
-        }
-
-        width: 2rem;
-        height: 2rem;
-        margin :0  4rem ;
-        cursor: pointer;
-        fill : $primary
+  svg {
+    &:first-of-type {
+      width: 2.5rem;
+      height: 2.5rem;
     }
+
+    width: 2rem;
+    height: 2rem;
+    margin: 0 4rem;
+    cursor: pointer;
+    fill: $primary;
+  }
 }
 
 .footerNav {
-    margin : 3rem 0;
-    width: 60%;
+  margin: 3rem 0;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+
+  nav {
+    width: 100%;
+  }
+
+  li {
+    margin: 0;
+    width: 18%;
+    text-align: center;
+  }
+
+  ul {
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+  }
 
-    nav {
-        width: 100%;
+  a {
+    color: $primary;
+
+    &:hover {
+      color: $primary;
+      font-weight: bold;
     }
+  }
+}
 
-    li {
-        margin : 0;
-        width: 18%;
-        text-align: center;
-    }
+@include on-device(mobile) {
+  .footerNav {
+    display: none;
+  }
 
-    ul {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-    }
-   
-    a {
-
-        color :$primary;
-
-        &:hover {
-            color :$primary;
-            font-weight: bold;
-        }
-        
-    }
+  .footerSocial {
+    margin-bottom: 3rem;
+  }
 }
