--- a/src/components/Sale/sale.module.scss
+++ b/src/components/Sale/sale.module.scss
@@ -17,7 +17,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($primary, 0.5);
+  background-color: rgba($primary, 0.7);
 }
 
 .saleImageText {
@@ -72,6 +72,47 @@
     button {
       color: $white !important;
       border-color: $white !important;
+    }
+  }
+
+  .saleSection {
+    img {
+      width: 100%;
+    }
+  }
+
+  .saleOverlay {
+    height: 99.5%;
+  }
+}
+
+@include on-device(mobile) {
+  .saleImageText {
+    font-size: 2rem;
+    width: 100%;
+    left: 0;
+    text-align: center;
+  }
+
+  .saleImageBox {
+    clip-path: none;
+    margin: 0;
+  }
+
+  .saleDescriptionBox {
+    color: $white;
+    width: 100%;
+    @include flex-center;
+    flex-direction: column;
+    left: 0;
+    text-align: center;
+    button {
+      color: $white !important;
+      border-color: $white !important;
+    }
+
+    p {
+      font-size: 1.5rem;
     }
   }
 
