--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -17,12 +17,6 @@ html {
   }
 }
 
-@include on-device(tablet) {
-  html {
-    font-size: 50%;
-  }
-}
-
 body {
   padding: 0;
   margin: 0;
@@ -46,5 +40,17 @@ input {
   &:active {
     outline-width: 0 !important;
     box-shadow: none !important;
+  }
+}
+
+@include on-device(tablet) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@include on-device(mobile) {
+  html {
+    font-size: 40%;
   }
 }
