added responsive design for landing page

--- a/src/components/Banner/Slogan/slogan.module.scss
+++ b/src/components/Banner/Slogan/slogan.module.scss
@@ -20,6 +20,18 @@
   }
 }
 
+@include on-device(small-laptop) {
+  .slogan {
+    font-size: 6.5rem;
+  }
+}
+
+@include on-device(large-tablet) {
+  .slogan {
+    font-size: 6rem;
+  }
+}
+
 @include on-device(tablet) {
   .slogan {
     font-size: 5rem;
