--- a/src/components/Sale/sale.module.scss
+++ b/src/components/Sale/sale.module.scss
@@ -28,6 +28,10 @@
   color: $white;
 }
 
+.saleImage {
+  width: 100%;
+}
+
 .saleDescriptionBox {
   display: flex;
   flex-direction: column;
@@ -54,9 +58,10 @@
 @include on-device(tablet) {
   .saleImageText {
     font-size: 4rem;
-    top: 20%;
-    left: 40%;
+    width: 100%;
+    left: 0;
     text-align: center;
+    top: 0;
   }
 
   .saleImageBox {
@@ -66,8 +71,10 @@
 
   .saleDescriptionBox {
     color: $white;
-    left: 40%;
-    top: 45%;
+    width: 100%;
+    @include flex-center;
+    flex-direction: column;
+    left: 0;
     text-align: center;
     button {
       color: $white !important;
