--- a/src/components/StoreFilter/storeFilter.module.scss
+++ b/src/components/StoreFilter/storeFilter.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables";
+@import "../../styles/mixins";
 
 .storeFilter {
   display: flex;
@@ -17,5 +18,27 @@
   }
   ul {
     width: 90%;
+  }
+}
+
+@include on-device(mobile) {
+  .storeFilter {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 2rem;
+  }
+
+  .storeSelect {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+
+  .range {
+    width: 90%;
+    margin: 0;
+
+    & > div {
+      width: 100%;
+    }
   }
 }
