added responsive design for bag page

--- a/src/pages/Bag/bag.module.scss
+++ b/src/pages/Bag/bag.module.scss
@@ -26,3 +26,15 @@
   font-size: 3rem;
   opacity: 0.6;
 }
+
+@include on-device(large-tablet) {
+  .bagPage {
+    flex-direction: column;
+    min-height: 100vh;
+  }
+
+  .bagList,
+  .bagSidebar {
+    width: 100%;
+  }
+}
