--- a/src/components/Bag/BagItem/bagItem.module.scss
+++ b/src/components/Bag/BagItem/bagItem.module.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/variables";
+@import "../../../styles/mixins";
 
 .bagItem {
   padding: 2rem;
@@ -18,6 +19,7 @@
   height: 100%;
   width: 100%;
   border: 1px solid $primary;
+  object-fit: cover;
 }
 
 .productInfo {
@@ -84,5 +86,29 @@
   svg {
     width: 1.6rem;
     height: 1.6rem;
+  }
+}
+
+@include on-device(large-tablet) {
+  .bagItem {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .bagItemImgContainer {
+    width: 25rem;
+    height: 25rem;
+  }
+
+  .productInfo {
+    margin-left: 0;
+    margin-top: 2rem;
+    position: relative;
+  }
+
+  .productPrice {
+    position: absolute;
+    top: 1px;
+    right: 0;
   }
 }
