--- a/src/components/Bag/BagSideBar/bagSideBar.module.scss
+++ b/src/components/Bag/BagSideBar/bagSideBar.module.scss
@@ -1,4 +1,5 @@
 @import "../.../../../../styles/variables";
+@import "../.../../../../styles/mixins";
 
 .bagSidebar {
   padding: 2rem;
@@ -58,4 +59,11 @@
 
 .totalPrice {
   font-weight: bold;
+}
+
+@include on-device(large-tablet) {
+  .bagSidebar {
+    margin-left: 0;
+    height: 40rem;
+  }
 }
