--- a/src/components/CheckoutList/CheckoutItem/checkoutItem.module.scss
+++ b/src/components/CheckoutList/CheckoutItem/checkoutItem.module.scss
@@ -1,4 +1,5 @@
 @import "/src/styles/variables";
+@import "/src/styles/mixins";
 
 .checkoutItem {
   display: flex;
@@ -55,4 +56,25 @@ span.itemSelectedOption {
   display: flex;
   width: 30%;
   justify-content: space-between;
+}
+
+@include on-device(mobile) {
+  .itemTitle {
+    font-size: 1.7rem;
+    margin-top: 2rem;
+    margin-bottom: 0rem;
+  }
+
+  .itemInfoContainer {
+    flex-direction: column;
+  }
+
+  .itemTotals {
+    width: 50%;
+  }
+
+  .itemImgContainer {
+    height: 15rem;
+    width: 15rem;
+  }
 }
