--- a/src/components/CheckoutList/checkoutList.module.scss
+++ b/src/components/CheckoutList/checkoutList.module.scss
@@ -1,4 +1,5 @@
 @import "/src/styles/variables";
+@import "/src/styles/mixins";
 
 .checkoutTotal {
   display: flex;
@@ -17,4 +18,10 @@
   text-align: center;
   font-size: 1.8rem;
   font-weight: 600;
+}
+
+@include on-device(mobile) {
+  .checkoutTotalData {
+    width: 50%;
+  }
 }
