--- a/src/components/ShippingMethods/shippingMethods.module.scss
+++ b/src/components/ShippingMethods/shippingMethods.module.scss
@@ -1,4 +1,5 @@
 @import "/src/styles/variables";
+@import "/src/styles/mixins";
 
 .shippingMethodsContainer {
   padding: 2rem;
@@ -32,4 +33,14 @@
   margin-top: 0;
   font-size: 1.8rem;
   font-weight: 500;
+}
+
+@include on-device(mobile) {
+  .methodEstimate {
+    width: 60%;
+  }
+
+  .shippingMethod {
+    width: 100%;
+  }
 }
