--- a/src/components/LoginForm/loginForm.module.scss
+++ b/src/components/LoginForm/loginForm.module.scss
@@ -15,3 +15,14 @@
   clip-path: polygon(48% 0, 100% 0, 100% 100%, 0% 100%);
   justify-content: flex-end;
 }
+
+@include on-device(mobile) {
+  .loginFormWrapper {
+    width: 100%;
+    filter: none;
+  }
+
+  .loginForm {
+    clip-path: polygon(35% 0, 100% 0, 100% 100%, 0% 100%);
+  }
+}
